<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Anybeam</string>
    <string name="replaceMe">Replace Me</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_refresh">Reload client list</string>
    <string name="action_share">Share</string>
    <string name="icon_device">Device Icon</string>
    <string name="info_adress">IP-Address:</string>
    <string name="info_id">ID:</string>
    <string name="info_os">OS:</string>
    <string name="main_click_to_share">Tap to beam clipboard</string>
    <string name="main_instruction">Use the share button in other apps to beam data</string>
    <string name="default_client_name">Android</string>
    <string name="default_port_broadcast">10042</string>
    <string name="default_port_data">10043</string>
    <string name="default_encyption_type">AES128</string>
    <string name="default_device_type">TYPE_SMARTPHONE</string>
    <string name="default_display_time">0</string>
    <string name="default_data_folder">Download</string>
    <string name="settings_title">Settings</string>
    <string name="settings_category_group">Group Settings</string>
    <string name="settings_category_group_summary">All group settings must be equal on all devices.</string>
    <string name="settings_pref_broadcast_port">Broadcast Port</string>
    <string name="settings_pref_group_password">Group Password</string>
    <string name="settings_pref_group_password_summary">Set the group encryption password</string>
    <string name="settings_pref_encryption_type">Encryption type</string>
    <string name="settings_category_client">Client Settings</string>
    <string name="settings_pref_client_name">Client Name</string>
    <string name="settings_pref_data_port">Data Port</string>
    <string name="settings_pref_device_type">Device Type</string>
    <string name="settings_category_general">General Settings</string>
    <string name="settings_pref_display_time">Notification Display time</string>
    <string name="settings_pref_display_time_summary">seconds (0 = unlimited)</string>
    <string name="settings_pref_data_folder">Download Path</string>
    <string name="settings_pref_data_folder_summary">/storage/</string>
    <string name="settings_pref_auto_url">Auto Open Links</string>
    <string name="settings_pref_auto_url_summary">Auto open received links</string>
    <string name="settings_category_links">Links</string>
    <string name="settings_category_links_webpage">Webpage</string>
    <string name="settings_category_links_download">Download the Desktop Application</string>
    <string name="settings_category_links_download_summary">anybeam.de/download</string>
    <string name="settings_category_links_help">Help</string>
    <string name="settings_category_other">Other</string>
    <string name="settings_category_about">About</string>
    <string name="settings_category_about_summary">
        Created and developed by:\n
        \t Christian Würthner\n
        \t Jan-Henrik Preuß\n
        As team assignment to develop an Android application. \n \n 
        Computer Science (BSC), Furtwangen University 2014
        </string>
    <string name="settings_category_legal">Legal Notices</string>
    <string name="settings_category_legal_icons">Icons</string>
    <string name="settings_category_legal_icons_summary">
        Device icons from iconmonstr.com\n
		All other icons are part of the Android ecosystem. \n \n
		The Android HelpViewPager is created by Patrik Åkerfeldt, Francisco Figueiredo Jr. and Jake Wharton. \n 
		Licenced under Apache License, Version 2.0 http://www.apache.org/licenses/LICENSE-2.0	</string>
    <string name="settings_category_legal_core">Core Api</string>
    <string name="settings_category_legal_core_summary">
		The Anybeam Core API is available under the GNU GPLv2 on Github
		https://anybeam.de/core	</string>
    <string name="settings_pref_error_port_title">Invalid Port</string>
    <string name="settings_pref_error_port_message">The port must be an integer between 1024 and 65535</string>
    <string name="settings_pref_error_title">Input Error</string>
    <string name="settings_pref_error_length_long">Your input is to long</string>
    <string name="settings_pref_error_length_short">Your input is to short</string>
    <string name="settings_pref_error_integer">Your input is to short</string>
    <string name="settings_pref_error_path">
        Your chosen path is not valid. Use only characters between A-z, 
        numbers, spaces or \'-\', \'_\', \'(\', \')\' \n
        Example: this/is/my/path</string>
    <string name="send_title">Choose a Device</string>
    <string name="send_clients_not_found">No Clients Found</string>
    <string name="send_clipboard_error">The clipboard dose not contain text to beam</string>
    <string name="transmission_in_done_title_clipboard">New clipboard text received</string>
    <string name="transmission_in_done_title_url">Tap to open URL</string>
    <string name="transmission_in_done_title_file">New file received, tap to open</string>
    <string name="transmission_in_progress_title">Receiving file</string>
    <string name="transmission_out_done_title_file">File Beamed</string>
    <string name="transmission_out_progress_title">Beaming in Progress</string>
    <string name="error_port_bind">Port bind error</string>
    <string name="error_port_bind_summary">The present ports for brodcast or data messages are already used by another application</string>
    <string name="error_file_select">File not found</string>
    <string name="error_file_select_summary">Can\'t find the selected file</string>
    <string name="error_transmission_failed">Transmission failed</string>
    <string name="error_transmission_failed_summary">Check your password and encryption type</string>
    <string name="alt_ivsearching">Searching</string>
    <string name="welcome_screen1_title">Welcome to Anybeam</string>
    <string name="welcome_screen1_summary">Share your content with ease \n Securely</string>
    <string name="welcome_screen1_image_alt">Anybeam Launcher</string>
    <string name="welcome_screen2_title">How to share your Content?</string>
    <string name="welcome_screen2_summary">Its very simple, just use Android\'s buildin share function.</string>
    <string name="welcome_screen2_image_alt">Share</string>
    <string name="welcome_screen3_title">How to share your Content?</string>
    <string name="welcome_screen3_summary">Next select the device you want to share to.</string>
    <string name="welcome_screen3_image_alt">Share</string>
    <string name="welcome_screen4_title">Choose a password</string>
    <string name="welcome_screen4_summary">Your password must be equal on all your devices. \n You can set your own password.</string>
    <string name="welcome_screen4_button">Set password</string>
    
</resources>