<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:key="group_settings"
        android:title="@string/settings_category_group" >
        <Preference
            android:enabled="false"
            android:selectable="false"
            android:summary="@string/settings_category_group_summary" />

        <EditTextPreference
            android:defaultValue="@string/default_port_broadcast"
            android:inputType="number"
            android:key="port_broadcast"
            android:title="@string/settings_pref_broadcast_port" />
        <EditTextPreference
            android:key="group_password"
            android:inputType="textVisiblePassword"
            android:summary="@string/settings_pref_group_password_summary"
            android:title="@string/settings_pref_group_password" />
        <ListPreference
            android:defaultValue="@string/default_encyption_type"
            android:entries="@array/encyption_type"
            android:entryValues="@array/encyption_type_key"
            android:key="group_encryption_type"
            android:title="@string/settings_pref_encryption_type" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="client_settings"
        android:title="@string/settings_category_client" >
        <EditTextPreference
            android:key="client_name"
            android:title="@string/settings_pref_client_name" />
        <EditTextPreference
            android:defaultValue="@string/default_port_data"
            android:inputType="number"
            android:key="port_data"
            android:title="@string/settings_pref_data_port" />
        <ListPreference
            android:defaultValue="@string/default_device_type"
            android:entries="@array/device_type"
            android:entryValues="@array/device_type_key"
            android:key="client_type"
            android:title="@string/settings_pref_device_type" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="general_settings"
        android:title="@string/settings_category_general" >
        <EditTextPreference
            android:defaultValue="@string/default_display_time"
            android:inputType="number"
            android:key="display_time"
            android:title="@string/settings_pref_display_time" 
        	android:summary="@string/settings_pref_display_time_summary" />
        <EditTextPreference 
            android:defaultValue="@string/default_data_folder"
            android:key="data_folder"
            android:title="@string/settings_pref_data_folder"
            android:summary="@string/settings_pref_data_folder_summary"/>
        <CheckBoxPreference 
            android:key="auto_url" 
            android:defaultValue="false"
            android:title="@string/settings_pref_auto_url"
            android:summary="@string/settings_pref_auto_url_summary"/>
    </PreferenceCategory>
    <PreferenceCategory 
        android:key="links"
        android:title="@string/settings_category_links">
        <Preference 
            android:key="webpage" 
            android:title="@string/settings_category_links_download"
            android:summary="@string/settings_category_links_download_summary">
             <intent
				 android:action="android.intent.action.VIEW"
				 android:data="http://anybeam.de/download"/>
        </Preference>
        <Preference 
            android:key="webpage" 
            android:title="@string/settings_category_links_webpage">
             <intent
				 android:action="android.intent.action.VIEW"
				 android:data="http://anybeam.de"/>
        </Preference>
        <Preference 
            android:key="help" 
            android:title="@string/settings_category_links_help">
             <intent
				 android:action="android.intent.action.VIEW"
				 android:data="http://anybeam.de/help"/>
        </Preference>        
    </PreferenceCategory> 
    <PreferenceCategory 
        android:title="@string/settings_category_other" 
        android:key="other">
        <PreferenceScreen 
            android:title="@string/settings_category_about" >
            <Preference
                android:summary="@string/settings_category_about_summary"
                android:title="@string/app_name" />
        </PreferenceScreen> 
        <PreferenceScreen 
            android:title="@string/settings_category_legal" >
            <Preference
                android:title="@string/settings_category_legal_icons"
                android:summary="@string/settings_category_legal_icons_summary" />
            <Preference
                android:title="@string/settings_category_legal_core"
                android:summary="@string/settings_category_legal_core_summary">
                <intent
				 android:action="android.intent.action.VIEW"
				 android:data="http://anybeam.de/core"/>
            </Preference>
        </PreferenceScreen>
        
        
    </PreferenceCategory>

</PreferenceScreen>