<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="12dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp" >

    <TextView
        android:id="@+id/tvShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ivLogoLarge"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/welcome_screen1_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />    
    
    <ImageView
        android:id="@+id/ivLogoLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_launcher_large" 
        android:contentDescription="@string/welcome_screen1_image_alt"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogoLarge"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_screen1_summary"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
