<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="12dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp" >

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textVisiblePassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPassword"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignRight="@+id/etPassword"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_screen4_summary" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/welcome_screen4_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSettingsSet"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignRight="@+id/etPassword"
        android:layout_below="@+id/etPassword"
        android:text="@string/welcome_screen4_button" />

</RelativeLayout>